--- a/CS3280_Group14/Windows/wndEdit.xaml
+++ b/CS3280_Group14/Windows/wndEdit.xaml
@@ -5,6 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CS3280_Group14"
         mc:Ignorable="d"
+        Closing="Window_Closing"
         Title="wndEdit" Height="300" Width="300">
     <Grid>
         
